# datum_console

./: .gitignore  README.rst  console.py  demo.py  setup.cfg
datum_console/: console.py
tests/: __init__.py  test_console.py
