[metadata]
name = datum_console
version = attr: datum_console.__version__
author = Blair Frandeen
author_email = blairfrandeen@gmail.com
description = A library for interactive prompts
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/blairfrandeen/titr
project_urls =
    # Bug Tracker = https://github.com/blairfrandeen/titr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    # pyperclip
    # pywin32;platform_system=='Windows'
    # colorama
    # pandas

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    titr = titr:titr_main.main

[semantic_release]
version_variable = src/datum_console/__init__.py:__version__
build_command = python3 -m build

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 88
exclude = venv/*
